# pylife

./: README.md  pyproject.toml
pylife/: __init__.py  __main__.py  cli.py  grid.py  patterns.py  patterns.toml  views.py
